# State_Design_Pattern

./: .gitignore  LICENSE  README.md
c/: CMakeLists.txt  Makefile
c/include/: xraymachine.h  xraystate.h
c/src/: test.c  xraymachine.c  xraystate.c
c/src/include/: xraymachine.h
cpp/: CMakeLists.txt  Makefile
cpp/include/: xraymachine.h  xraystate.h
cpp/scripts/: test.scxray
cpp/src/: foo.cpp  main.cpp  test.cpp  xraymachine.cpp  xraystate.cpp
cpp/src/include/: foo.h  xraymachine.h  xraystate.h
markdown/: StateD_XRayMachine.drawio  XRayMachine.drawio  state.drawio
p5/: index.html
p5/src/: sketch.js  ui_elem.js
p5_javascript/: index.html
p5_javascript/src/: sketch.js  state_ui_elem.js  xraymachine.js  xraystate.js
python3/src/: test.py  xraymachine.py  xraystate.py
